force-app/main/default/objects/BeatRoute__c/BeatRoute__c.object-meta.xml
<CustomObject>
    <label>Beat Route</label>
    <pluralLabel>Beat Routes</pluralLabel>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Beat Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BeatPlan__c</fullName>
        <label>Beat Plan</label>
        <referenceTo>BeatPlan__c</referenceTo>
        <relationshipLabel>Beat Routes</relationshipLabel>
        <relationshipName>BeatRoutes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <required>true</required>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Beat Routes</relationshipLabel>
        <relationshipName>BeatRoutes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartHub__c</fullName>
        <label>Start Hub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndHub__c</fullName>
        <label>End Hub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedDoors__c</fullName>
        <label>Planned Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>