force-app/main/default/objects/BeatRoute__c/fields/EndHub__c.field-meta.xml
<CustomField>
    <fullName>EndHub__c</fullName>
    <label>EndHub</label>
    <length>100</length>
    <type>Text</type>
</CustomField>