force-app/main/default/objects/BeatRoute__c/fields/PlannedDoors__c.field-meta.xml
<CustomField>
    <fullName>PlannedDoors__c</fullName>
    <label>PlannedDoors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>