force-app/main/default/objects/BeatRoute__c/fields/StartHub__c.field-meta.xml
<CustomField>
    <fullName>StartHub__c</fullName>
    <label>StartHub</label>
    <length>100</length>
    <type>Text</type>
</CustomField>