force-app/main/default/objects/BeatRoute__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>True</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <default>False</default>
                <label>InProgress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <default>False</default>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>